tests/ui/async-await/issue-70935-complex-spans.stderr
error[E0277]: `{async block@$DIR/issue-70935-complex-spans.rs:18:5: 22:6}` cannot be sent between threads safely
  --> $DIR/issue-70935-complex-spans.rs:15:23
   |
LL | fn foo(x: NotSync) -> impl Future + Send {
   |                       ^^^^^^^^^^^^^^^^^^ `{async block@$DIR/issue-70935-complex-spans.rs:18:5: 22:6}` cannot be sent between threads safely
   |
   = help: within `NotSync`, the trait `Send` is not implemented for `{async block@$DIR/issue-70935-complex-spans.rs:18:5: 22:6}`, which is required by `{async block@$DIR/issue-70935-complex-spans.rs:18:5: 22:6}: Send`
note: required because it appears within the type `PhantomData<*mut ()>`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
note: required because it appears within the type `NotSync`
  --> $DIR/issue-70935-complex-spans.rs:9:8
   |
LL | struct NotSync(PhantomData<*mut ()>);
   |        ^^^^^^^
   = note: required for `&NotSync` to implement `Send`
note: required because it's used within this closure
  --> $DIR/issue-70935-complex-spans.rs:19:13
   |
LL |         baz(|| async {
   |             ^^
note: required because it's used within this `async` fn body
  --> $DIR/issue-70935-complex-spans.rs:12:67
   |
LL |   async fn baz<T>(_c: impl FnMut() -> T) where T: Future<Output=()> {
   |  ___________________________________________________________________^
LL | | }
   | |_^
   = note: required because it captures the following types: `impl Future<Output = ()>`
note: required because it's used within this `async` block
  --> $DIR/issue-70935-complex-spans.rs:18:5
   |
LL | /     async move {
LL | |         baz(|| async {
LL | |             foo(x.clone());
LL | |         }).await;
LL | |     }
   | |_____^

error[E0277]: `{coroutine witness@$DIR/issue-70935-complex-spans.rs:18:5: 22:6}` cannot be sent between threads safely
  --> $DIR/issue-70935-complex-spans.rs:15:23
   |
LL | fn foo(x: NotSync) -> impl Future + Send {
   |                       ^^^^^^^^^^^^^^^^^^ `{coroutine witness@$DIR/issue-70935-complex-spans.rs:18:5: 22:6}` cannot be sent between threads safely
   |
   = help: within `NotSync`, the trait `Send` is not implemented for `{coroutine witness@$DIR/issue-70935-complex-spans.rs:18:5: 22:6}`, which is required by `{async block@$DIR/issue-70935-complex-spans.rs:18:5: 22:6}: Send`
note: required because it appears within the type `PhantomData<*mut ()>`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
note: required because it appears within the type `NotSync`
  --> $DIR/issue-70935-complex-spans.rs:9:8
   |
LL | struct NotSync(PhantomData<*mut ()>);
   |        ^^^^^^^
   = note: required for `&NotSync` to implement `Send`
note: required because it's used within this closure
  --> $DIR/issue-70935-complex-spans.rs:19:13
   |
LL |         baz(|| async {
   |             ^^
note: required because it's used within this `async` fn body
  --> $DIR/issue-70935-complex-spans.rs:12:67
   |
LL |   async fn baz<T>(_c: impl FnMut() -> T) where T: Future<Output=()> {
   |  ___________________________________________________________________^
LL | | }
   | |_^
   = note: required because it captures the following types: `impl Future<Output = ()>`
note: required because it's used within this `async` block
  --> $DIR/issue-70935-complex-spans.rs:18:5
   |
LL | /     async move {
LL | |         baz(|| async {
LL | |             foo(x.clone());
LL | |         }).await;
LL | |     }
   | |_____^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
